01BRAND_INST-BRAND/css/custom1.css
/* ... */
span[translate="nui.ngrs.request.date.pickup"] {
  display: none;
}

span[translate="nui.ngrs.request.date.due_date"] {
  display: none;
}

prm-account p.request-location.dateContent {
 display: none; 
}

prm-account p.request-location.pickup-until {
  display: block;
}





p[ng-if^="::requestDisplay.maxNumOfViews"] {
  display: none;
}


prm-blank_ill md-radio-button[value="PHYSICAL_NON_RETURNABLE"]{
  display: none;
}

/*Changes for blank ILL form*/
prm-blank_ill prm-request prm-form-field md-input-container label:not(.md-no-float):not(._md-container-ignore) {
  max-width: 400px; 
  width: auto;
}

prm-blank_ill md-input-container .md-placeholder, md-input-container label:not(.md-no-float):not(.md-container-ignore) {
   overflow: visible;
   text-overflow: unset;
   white-space: normal;
}

@media (max-width: 600px){

  prm-blank_ill prm-request prm-form-field md-input-container label:not(.md-no-float):not(._md-container-ignore) {
     max-width: 300px; 
     width: auto;
  }

  prm-blank_ill md-input-container .md-placeholder, md-input-container label:not(.md-no-float):not(.md-container-ignore) {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
  }
  
}


prm-journals prm-resource-recommender {
  display: none;
}

#backToCatalog {
  padding: 5px;
  padding-left: 10px;
  padding-right: 10px;
  background-color: white;
  font-size: 14pt;
  max-width: 150px;
  border-radius: 20px;
  font-weight: 900;
  text-align: center;
  margin-top: 10px;
  margin-bottom: 10px;
  position: relative;
  top: -73px;  
}

@media(max-width: 1280px){
  #backToCatalog {
    float: right;
    right: 50px;
  }
}


@media(max-width: 970px){
  #backToCatalog {
    display: none;
  }
}

button.badgesButton {
  background-color: inherit;
  border: none;
}

md-virtual-repeat-container prm-icon-after {
  display: none;
}

prm-service-links prm-icon-after {
  display: none;
}

prm-chapters-results-line prm-icon-after {
  display: none;
}

prm-ngrs-results-button prm-icon-after {
  display: none;
}

.section-content .md-chips div[data-facet-value="tlevel-open_access"] {
  display: none;
}

prm-topbar .isServicePage {
  display: block;
}

